unpackaged/objects/Meeting_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description </label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Plan_Type__c</fullName>
        <label>Meeting Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled Visit </fullName>
                </value>
                <value>
                    <fullName>Payment Collection </fullName>
                </value>
                <value>
                    <fullName>Document Collection </fullName>
                </value>
                <value>
                    <fullName>Verification </fullName>
                </value>
                <value>
                    <fullName>Other </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_End_Date_Time__c</fullName>
        <label>Planned End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date_Time__c</fullName>
        <label>Planned Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Meeting Plans</relationshipLabel>
        <relationshipName>Meeting_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned </fullName>
                </value>
                <value>
                    <fullName>In Progress </fullName>
                </value>
                <value>
                    <fullName>Pending </fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Meeting Plan</label>
    <nameField>
        <label>Meeting Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>